Added files from desktop
added files such as start.html, start.css, start.js Created start page

--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.4/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.4/addons/p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Logic Puzzle</title>
+    <title>GateKeeper - Main</title>
     <meta charset="utf-8" />
 
   </head>
   <body>
     <main>
+      
+
+
       <!-- Added background to canvas -->
       <section id="background">
 
@@ -24,5 +27,6 @@
 
     </main>
     <script src="sketch.js"></script>
+    <script src="start.js"></script>
   </body>
 </html>
