Start of Level select

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="start-buttons">
                 <a href="./main/index.html" target="_blank"><button class="start-btn">Start</button></a>
                 <button class="options-btn">Options</button>
-                <button class="level-btn">Level Select</button>
+                <a href="./LevelSelect/index.html" target="_blank"><button class="level-btn">Level Select</button></a>
             </div>
             <!-- The sound button on sbottom right -->
             <div class="sound-button">
