--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
             <!-- The 3 buttons that control start, options, and level select -->
             <div class="start-buttons">
-                <a href="./main/index.html" target="_blank"><button class="start-btn">Start</button></a>
+                <a href="./levels/level1.html"><button class="start-btn">Start</button></a>
                 <button class="options-btn">Options</button>
                 <button class="level-btn">Level Select</button>
             </div>
