--- a/levels/level1/level1.html
+++ b/levels/level1/level1.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GateKeeper - Level 1</title>
     <link rel="stylesheet" href="level1.css">
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.4/p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.4/addons/p5.sound.min.js"></script>
 
     <!-- Link the google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,8 +18,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+    <script src="sketch.js"></script>
+
     <section id="level1-background">
         <h1>Level 1</h1>
     </section>
+    
 </body>
 </html>
