Dynamically loading level select page and level content

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
             <div class="start-buttons">
                 <a href="./levels/level1/level1.html"><button class="start-btn">Start</button></a>
                 <button class="options-btn">Options</button>
-                <button class="level-btn">Level Select</button>
+                <!--<button class="level-btn">Level Select</button>-->
+                <a href="./level_select/level_select.html"><button class="level-btn">Level Select</button></a>
             </div>
             <!-- The sound button on sbottom right -->
             <div class="sound-button">
