--- a/main/index.html
+++ b/main/index.html
@@ -7,6 +7,12 @@
     <title>GateKeeper - Main</title>
     <meta charset="utf-8" />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Bangers&family=Belanosima:wght@400;600;700&family=Modak&family=Rampart+One&display=swap" rel="stylesheet">
+    <!-- Link the font icons from font awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   </head>
   <body>
     <main>
@@ -14,7 +20,8 @@
 
 
       <!-- Added background to canvas -->
-      <section id="background">
+      <section id="level-background">
+        <h1 id="Level-Name"></h1>
 
       </section>
       
@@ -27,6 +34,5 @@
 
     </main>
     <script src="sketch.js"></script>
-    <script src="start.js"></script>
   </body>
 </html>
