Cleaned up some files and fixed text alignment on logic gates

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             </div>
             <!-- The 3 buttons that control start, options, and level select -->
             <div class="start-buttons">
-                <a href=".main/index.html"><button class="start-btn">Start</button></a>
+                <a href="/main/index.html"><button class="start-btn">Start</button></a>
                 <button class="options-btn">Options</button>
-                <a href="./level_select/level_select.html"><button class="level-btn">Level Select</button></a>
+                <a href="./level_select/level_select.html"><button class="start-btn">Level Select</button></a>
             </div>
             
 
