Fixed reference to main

--- a/level_select/level_select.html
+++ b/level_select/level_select.html
@@ -50,7 +50,7 @@
                         //store gates from selected level in local storage. Will allow users to start from the level they ended on.
                         localStorage.setItem('initialize_objects', JSON.stringify(level));
                         //redirect to the main page
-                        window.location.href = '//main/index.html';
+                        window.location.href = './main/index.html';
 
                         console.log(`Selected level: ${level.Name}`);
                         console.log('Object:', JSON.stringify(level));
