changed back to main button on level options to home and redirected it to start page

--- a/main/index.html
+++ b/main/index.html
@@ -47,7 +47,7 @@
   
       <!-- Bottom Section with Back Button -->
       <div class="bottom-options-section">
-          <button id="back-to-main">Level Select</button>
+          <button id="back-to-main">Home</button>
       </div>
   </div>
     <main>
