Renamed assets and pages

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <script type="text/javascript">
         function loadMain() {
-            window.location.href = "./main/templates/index.html"
+            window.location.href = "./main/pages/index.html"
         }
         window.onload = loadMain;
         </script>
