--- a/main/pages/play.html
+++ b/main/pages/play.html
@@ -3,7 +3,7 @@
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.4/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.4/addons/p5.sound.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="../static/style.css">
+    <link rel="stylesheet" type="text/css" href="../assets/style.css">
     <title>GateKeeper - Main</title>
     <meta charset="utf-8" />
 
@@ -106,16 +106,16 @@
 
 
     </main>
-    <script src="../static/spatialHash.js"></script>
+    <script src="../assets/spatialHash.js"></script>
     
-    <script src="../static/NodeClass.js"></script>
+    <script src="../assets/NodeClass.js"></script>
 
-    <script src="../static/drawGates.js"></script>
+    <script src="../assets/drawGates.js"></script>
     
-    <script src="../static/GameSounds.js"></script>
-    <script src="../static/GateKeeperObjects.js"></script>
-    <script src="../static/sound_effect.js"></script>
-    <script src="../static/options.js"></script>
-    <script src="../static/getInfoPanel.js"></script>
+    <script src="../assets/GameSounds.js"></script>
+    <script src="../assets/GateKeeperObjects.js"></script>
+    <script src="../assets/sound_effect.js"></script>
+    <script src="../assets/options.js"></script>
+    <script src="../assets/getInfoPanel.js"></script>
   </body>
 </html>
