--- a/main/pages/terms.html
+++ b/main/pages/terms.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GateKeeper - Terms & Privacy</title>
-    <link rel="stylesheet" href="/SoftwareEngGroupA/main/static/terms.css">
+    <link rel="stylesheet" href="/SoftwareEngGroupA/main/assets/terms.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,7 +17,7 @@
     <section id="mainContainer">
         <header>
             <div class="logo">
-                <p class="logo-text"><a class="gatekeeper-home" href="../templates/index.html">GateKeeper </a> </p>
+                <p class="logo-text"><a class="gatekeeper-home" href="../pages/index.html">GateKeeper </a> </p>
                 <p>/</p>
                 <p class="terms-text">Terms & Policy</p>
             </div>
