Renamed music to sounds

--- a/main/pages/level_select.html
+++ b/main/pages/level_select.html
@@ -46,7 +46,7 @@
                     //If user clicks on button, then print level name and attributes
                     listItem.addEventListener('click', () => {
                         // play the btn sound effect when any listItem is clicked
-                        btnSound.play();
+                        btnSound2.play();
                         //store gates from selected level in local storage. Will allow users to start from the level they ended on.
                         localStorage.setItem('initialize_objects', JSON.stringify(level));
                         // delay the page change by 1 second (1000 ms)
@@ -77,7 +77,7 @@
         // When any button is clicked, it plays a sound effect
         allBtns.forEach(button => {
             button.addEventListener('click', () => {
-                btnSound.play();  // Play the button sound
+                btnSound2.play();  // Play the button sound
             });
         });
 
@@ -85,7 +85,7 @@
         allAtags.forEach(aTag => {
             aTag.addEventListener('click', (event) => {
                 event.preventDefault();  // Prevent default link behavior
-                btnSound.play();  // Play the button sound
+                btnSound2.play();  // Play the button sound
 
                 // Hardcoded 125ms timeout to let the button sound play before redirecting
                 setTimeout(() => {
