Fixed a language bug

--- a/main/pages/index.html
+++ b/main/pages/index.html
@@ -106,7 +106,7 @@
             <!-- Support title -->
             <div class="top-support-section">
                 <div class="support-title">
-                    <p>Help is on its way!</p>
+                    <p class="support-title-p">Help is on its way!</p>
                 </div>
                 <!-- the form for the support popup and action is sent to email after submission -->
                 <form id="supportForm" action="https://formsubmit.co/g6830926@gmail.com" method="post">
