Level selection page changed
ordered the levels vertically instead of horizontally for consistency

--- a/main/pages/level_select.html
+++ b/main/pages/level_select.html
@@ -15,13 +15,11 @@
 </head>
 <body>
     <section id="levelSelectPage">
+        <a href="index.html"><button class="back-btn"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M0 0h24v24H0z" fill="none"/><path d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"/></svg></button></a>
         <div class="level-select-title">
             <p>Select a Level</p>
         </div>
-        <div class="level-buttons" id="level-list">
-           
-        </div>
-        <a href="index.html"><button class="back-btn">Back</button></a>
+        <div class="level-buttons" id="level-list"></div>
     </section>
 
     <script>
