Added buttons to add components to sandbox

--- a/main/pages/sandbox.html
+++ b/main/pages/sandbox.html
@@ -59,28 +59,28 @@
       <p id="levelDesc" style="padding: 0 22%;">Feel Free to Play Around!</p>
       <h3>Add Gates to Canvas</h3>
       <ul id="gateList">
-          <li>
+          <li onclick="insertGateIntoGame(AndGate)">
             And Gate
           </li>
-          <li>
+          <li onclick="insertGateIntoGame(NandGate)">
             Nand Gate
           </li>
-          <li>
+          <li onclick="insertGateIntoGame(OrGate)">
             Or Gate
           </li>
-          <li>
+          <li onclick="insertGateIntoGame(XorGate)">
             Xor Gate
           </li>
-          <li>
+          <li onclick="insertGateIntoGame(NotGate)">
             Not Gate
           </li>
-          <li>
+          <li onclick="insertGateIntoGame(NorGate)">
             Nor Gate
           </li>
-          <li>
+          <li onclick="insertGateIntoGame(XnorGate)">
             Xnor Gate
           </li>
-          <li>
+          <li onclick="insertSwitchComponent()">
             Switch Component
           </li>
       </ul>
