--- a/main/pages/sandbox.html
+++ b/main/pages/sandbox.html
@@ -15,6 +15,7 @@
 
   </head>
   <body>
+    <div id="topDiv">Click on the screen to place a vertex. Press Shift to finish placing the Connection.</div>
     <button id="options-btn">
       <i class="fa fa-cog"></i>
   </button>
@@ -82,6 +83,9 @@
           </li>
           <li onclick="insertSwitchComponent()">
             Switch Component
+          </li>
+          <li onclick="insertConnectionLineIntoGame()">
+            Connection Line
           </li>
       </ul>
     </div>
