--- a/main/pages/index.html
+++ b/main/pages/index.html
@@ -31,7 +31,7 @@
             <div class="start-buttons">
                 <a href="play.html" id="GoToPlayPage"><button class="start-btn">Start</button></a>
                 <button class="options-btn">Options</button>
-                <a href="level_select.html"><button class="start-btn">Level Select</button></a>
+                <a href="level_select.html"><button class="level-select-btn">Level Select</button></a>
                 <a href="sandbox.html"><button class="start-btn">Sandbox</button></a>
             </div>
 
