--- a/main/pages/index.html
+++ b/main/pages/index.html
@@ -182,12 +182,12 @@
     </section>
     <section>
         <!-- This is the top right info/about button --> 
-        <button class="about-button" onclick="togglePopup()">ℹ</button>
+        <button class="about-button" onclick="togglePopup()"><i class="fa-solid fa-info" style="color: #ffffff;"></i></button>
     
         <!-- Popup includes an overlay behind the page to be able to click outside as well as the x to exit popup -->
         <div class="popup-overlay" id="popup" onclick="closePopup(event)">
             <div class="popup-content" onclick="event.stopPropagation()">
-                <button class="close-btn" onclick="togglePopup()">&times;</button>
+                <button class="close-btn" onclick="togglePopup()"><i class="fa-solid fa-xmark"></i></button>
     
                 <!-- using options menu popup css for title -->
                 <div class="top-about-section">
@@ -197,16 +197,16 @@
                 </div>
                 <!-- this is for the toggling between 'tabs' -->
                 <div class="tab-container">
-                    <div class="tab active game-info-pTag" onclick="openTab('game-info')">Game Info</div>
+                    <div class="tab active game-info-pTag" onclick="openTab('game-info')">Game Overview</div>
                     <div class="tab logic-gates-pTag" onclick="openTab('logic-gates')">Logic Gates</div>
                 </div>
                 <!-- div for body of tabs bc they were being janky-->
                 <div class="tab-body">
                     <div id="game-info" class="tab-content active">
                         <h3 class="about-game-pTag">About the Game</h3>
-                        <p class="about-desc-pTag"><br>Gatekeeper is a puzzle game where players use logic gates to manipulate circuits and achieve specific outputs. 
+                        <p class="about-desc-pTag"><br>Gatekeeper is a puzzle game where players use logic gates to manipulate circuits and achieve specific outputs.<br><br>
                             Each level presents a unique challenge, helping players learn how to design and optimize digital circuits. 
-                            The game is both educational and engaging, sharpening problem-solving skills while allowing players to climb the leaderboard.<br><br></p>
+                            The game is both educational and engaging, sharpening problem-solving skills while allowing players to climb the leaderboard.</p>
                     </div>
                     <div id="logic-gates" class="tab-content">
                         <h3 class="logic-overview-pTag">Logic Gates Overview</h3>
