Credits page language change

--- a/main/pages/index.html
+++ b/main/pages/index.html
@@ -158,21 +158,21 @@
              <!-- Credits title -->
              <div class="top-credits-section">
                 <div class="credits-title">
-                    <p>Credits</p>
+                    <p class="credits-title-pTag">Credits</p>
                 </div>
              </div>
              <div class="credits-container">
                 <div class="credits-content">
-                    <p><span class="credits-dev">Front-End Developer</span>Caitlyn Hartmann</p>
-                    <p><span class="credits-dev">Front-End Developer</span> Mario Stanic</p>
-                    <p><span class="credits-dev">Front-End Developer</span> Jeffrey Felger</p>
-                    <p><span class="credits-dev">Front-End Developer</span> Madelyn Washer</p>
+                    <p><span class="credits-dev front-end-span1">Front-End Developer</span>Caitlyn Hartmann</p>
+                    <p><span class="credits-dev front-end-span2">Front-End Developer</span> Mario Stanic</p>
+                    <p><span class="credits-dev front-end-span3">Front-End Developer</span> Jeffrey Felger</p>
+                    <p><span class="credits-dev front-end-span4">Front-End Developer</span> Madelyn Washer</p>
                     <hr class="credits-hr">
-                    <p><span class="credits-dev">Back-End Developer</span> Andrew Cash</p>
-                    <p><span class="credits-dev">Back-End Developer</span> Isha Gupta</p>
-                    <p><span class="credits-dev">Back-End Developer</span> Sam Markus</p>
-                    <p><span class="credits-dev">Back-End Developer</span> Jonathan Lanham</p>
-                    <p><span class="credits-dev">Back-End Developer</span> Vasu Ravindra Rabadia</p>
+                    <p><span class="credits-dev back-end-span1">Back-End Developer</span> Andrew Cash</p>
+                    <p><span class="credits-dev back-end-span2">Back-End Developer</span> Isha Gupta</p>
+                    <p><span class="credits-dev back-end-span3">Back-End Developer</span> Sam Markus</p>
+                    <p><span class="credits-dev back-end-span4">Back-End Developer</span> Jonathan Lanham</p>
+                    <p><span class="credits-dev back-end-span5">Back-End Developer</span> Vasu Ravindra Rabadia</p>
                     
                 </div>
              </div>
