Can log JSON object from sandbox

--- a/main/pages/sandbox.html
+++ b/main/pages/sandbox.html
@@ -19,6 +19,9 @@
     <button id="options-btn">
       <i class="fa fa-cog"></i>
   </button>
+  <button onclick="outputGameAsJSON()" class="sandbox-output-btn">
+    Output JSON
+  </button>
   
   <!-- Options Menu (Initially Hidden) -->
   <div id="options-menu">
