Color and og luna change

--- a/main/pages/index.html
+++ b/main/pages/index.html
@@ -409,6 +409,10 @@
                 background-image: url('../assets/images/bot1.png');
                 background-size: auto 100%;
             }
+
+            #bot:hover {
+                transform: scale(1.1);
+            }
         
             #bot.animated {
                 background-image: url('../assets/images/botmove-Sheet.png');
