--- a/main/pages/play.html
+++ b/main/pages/play.html
@@ -22,22 +22,23 @@
   <button id="run-btn">Run</button>
   
   <!-- Options Menu (Initially Hidden) -->
-  <div id="options-menu">
-         <button class="exit-btn" id="close-options">
-              <i class="fa-solid fa-xmark"></i>
-        </button>
-        <div class="options-title">
-              <p>Settings</p>
+  <div id="options-menu" style="display: none;">
+        <div class="exit-button">
+          <button class="exit-btn"><i class="fa-solid fa-xmark"></i></button>
         </div>
+        <div class="options-title">
+              <p class="settings-title">Settings</p>
+        </div>
+        <div class="settings-container">
           <div class="volume-container">
-              <div class="volume-icon">
-                  <i class="fa-solid fa-volume-off"></i>
-              </div>
-              <div class="volume-slider">
-                  <input type="range" id="volume-slider" min="0" max="100" value="50">
-              </div>
+            <div class="volume-icon">
+                <i class="fa-solid fa-volume-off"></i>
+            </div>
+            <div class="volume-slider">
+                <input type="range" id="volume-slider" min="0" max="100" value="50">
+            </div>
           </div>
-  
+
           <div class="music-container">
               <div class="music-icon">
                   <i class="fa-solid fa-music"></i>
@@ -46,11 +47,13 @@
                   <input type="range" id="music-slider" min="0" max="100" value="50">
               </div>
           </div>
-  
-      <!-- Bottom Section with Back Button -->
-      <div class="bottom-options-section">
-          <button id="back-to-main">Home</button>
-      </div>
+
+          <!-- Bottom Section with Back Button -->
+          <div class="bottom-options-section">
+              <a href="../pages/index.html"><button id="back-to-main">Home</button></a>
+          </div>
+        </div>
+          
   </div>
   <section>
     <div class="popup-overlay" id="popup" onclick="closePopup(event)">
