--- a/main/pages/sandbox.html
+++ b/main/pages/sandbox.html
@@ -1,58 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.4/p5.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.4/addons/p5.sound.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="../assets/styles/style.css">
-    <title>GateKeeper - Main</title>
-    <meta charset="utf-8" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Bangers&family=Belanosima:wght@400;600;700&family=Modak&family=Rampart+One&display=swap" rel="stylesheet">
-    <!-- Link the font icons from font awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<head>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.4/p5.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.4/addons/p5.sound.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="../assets/styles/style.css">
+  <title>GateKeeper - Main</title>
+  <meta charset="utf-8" />
 
-  </head>
-  <body>
-    <div id="topDiv">Click on the screen to place a vertex. Press Shift to finish placing the Connection.</div>
-    <button id="options-btn">
-      <i class="fa fa-cog"></i>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Bangers&family=Belanosima:wght@400;600;700&family=Modak&family=Rampart+One&display=swap"
+    rel="stylesheet">
+  <!-- Link the font icons from font awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+</head>
+
+<body>
+  <div id="topDiv">Click on the screen to place a vertex. Press Shift to finish placing the Connection.</div>
+  <button id="options-btn">
+    <i class="fa fa-cog"></i>
   </button>
   <button onclick="outputGameAsJSON()" class="sandbox-output-btn">
     Output JSON
   </button>
-  
+
   <!-- Options Menu (Initially Hidden) -->
   <div id="options-menu">
-         <button class="exit-btn" id="close-options">
-              <i class="fa-solid fa-xmark"></i>
-        </button>
-        <div class="options-title">
-              <p>Settings</p>
+    <button class="exit-btn" id="close-options">
+      <i class="fa-solid fa-xmark"></i>
+    </button>
+    <div class="options-title">
+      <p class="settings-title">Settings</p>
+    </div>
+    <div class="settings-container">
+      <div class="volume-container">
+        <div class="volume-icon">
+          <i class="fa-solid fa-volume-off"></i>
         </div>
-          <div class="volume-container">
-              <div class="volume-icon">
-                  <i class="fa-solid fa-volume-off"></i>
-              </div>
-              <div class="volume-slider">
-                  <input type="range" id="volume-slider" min="0" max="100" value="50">
-              </div>
-          </div>
-  
-          <div class="music-container">
-              <div class="music-icon">
-                  <i class="fa-solid fa-music"></i>
-              </div>
-              <div class="music-slider">
-                  <input type="range" id="music-slider" min="0" max="100" value="50">
-              </div>
-          </div>
-  
+        <div class="volume-slider">
+          <input type="range" id="volume-slider" min="0" max="100" value="50">
+        </div>
+      </div>
+
+      <div class="music-container">
+        <div class="music-icon">
+          <i class="fa-solid fa-music"></i>
+        </div>
+        <div class="music-slider">
+          <input type="range" id="music-slider" min="0" max="100" value="50">
+        </div>
+      </div>
+
       <!-- Bottom Section with Back Button -->
       <div class="bottom-options-section">
-          <button id="back-to-main">Home</button>
+        <button id="back-to-main">Home</button>
       </div>
+    </div>
   </div>
 
   <!-- Slide-out Gate Info Panel -->
@@ -63,33 +71,33 @@
       <p id="levelDesc" style="padding: 0 22%;">Feel Free to Play Around!</p>
       <h3>Add Gates to Canvas</h3>
       <ul id="gateList">
-          <li onclick="insertGateIntoGame(AndGate)">
-            And Gate
-          </li>
-          <li onclick="insertGateIntoGame(NandGate)">
-            Nand Gate
-          </li>
-          <li onclick="insertGateIntoGame(OrGate)">
-            Or Gate
-          </li>
-          <li onclick="insertGateIntoGame(XorGate)">
-            Xor Gate
-          </li>
-          <li onclick="insertGateIntoGame(NotGate)">
-            Not Gate
-          </li>
-          <li onclick="insertGateIntoGame(NorGate)">
-            Nor Gate
-          </li>
-          <li onclick="insertGateIntoGame(XnorGate)">
-            Xnor Gate
-          </li>
-          <li onclick="insertSwitchComponent()">
-            Switch Component
-          </li>
-          <li onclick="insertConnectionLineIntoGame()">
-            Connection Line
-          </li>
+        <li onclick="insertGateIntoGame(AndGate)">
+          And Gate
+        </li>
+        <li onclick="insertGateIntoGame(NandGate)">
+          Nand Gate
+        </li>
+        <li onclick="insertGateIntoGame(OrGate)">
+          Or Gate
+        </li>
+        <li onclick="insertGateIntoGame(XorGate)">
+          Xor Gate
+        </li>
+        <li onclick="insertGateIntoGame(NotGate)">
+          Not Gate
+        </li>
+        <li onclick="insertGateIntoGame(NorGate)">
+          Nor Gate
+        </li>
+        <li onclick="insertGateIntoGame(XnorGate)">
+          Xnor Gate
+        </li>
+        <li onclick="insertSwitchComponent()">
+          Switch Component
+        </li>
+        <li onclick="insertConnectionLineIntoGame()">
+          Connection Line
+        </li>
       </ul>
     </div>
   </div>
@@ -102,39 +110,40 @@
   </div>
 
 
-    <main>
-      <!-- Added background to canvas -->
-      <section id="">
-        <h1 id="Level-Name">Sandbox Mode</h1>
-        
-      </section>
+  <main>
+    <!-- Added background to canvas -->
+    <section id="">
+      <h1 id="Level-Name">Sandbox Mode</h1>
 
-      <div class="description-border">
-        <!-- <p id="Description" style="visibility: hidden;"></p> -->
-      </div>
+    </section>
 
-
+    <div class="description-border">
+      <!-- <p id="Description" style="visibility: hidden;"></p> -->
+    </div>
 
 
 
 
 
-    </main>
-    <script src="../assets/scripts/spatialHash.js"></script>
-    <script src="../assets/scripts/NodeClass.js"></script>
-    <script src="../assets/scripts/drawGates.js"></script>
-    <script src="../assets/scripts/GameSounds.js"></script>
-    <script src="../assets/scripts/GameObjects.js"></script>
-    <script src="../assets/scripts/ConnectionObjects.js"></script>
-    <script src="../assets/scripts/EndPointObjects.js"></script>
-    <script src="../assets/scripts/DraggableObjects.js"></script>
-    <script src="../assets/scripts/LogicGateObjects.js"></script>
-    <script src="../assets/scripts/ComponentsObjects.js"></script>
 
-    <script src="../assets/scripts/sandboxMain.js"></script>
 
-    <script src="../assets/scripts/sound_effect.js"></script>
-    <script src="../assets/scripts/options.js"></script>
-    <script src="../assets/scripts/sandboxSidePanel.js"></script>
-  </body>
+  </main>
+  <script src="../assets/scripts/spatialHash.js"></script>
+  <script src="../assets/scripts/NodeClass.js"></script>
+  <script src="../assets/scripts/drawGates.js"></script>
+  <script src="../assets/scripts/GameSounds.js"></script>
+  <script src="../assets/scripts/GameObjects.js"></script>
+  <script src="../assets/scripts/ConnectionObjects.js"></script>
+  <script src="../assets/scripts/EndPointObjects.js"></script>
+  <script src="../assets/scripts/DraggableObjects.js"></script>
+  <script src="../assets/scripts/LogicGateObjects.js"></script>
+  <script src="../assets/scripts/ComponentsObjects.js"></script>
+
+  <script src="../assets/scripts/sandboxMain.js"></script>
+
+  <script src="../assets/scripts/sound_effect.js"></script>
+  <script src="../assets/scripts/options.js"></script>
+  <script src="../assets/scripts/sandboxSidePanel.js"></script>
+</body>
+
 </html>
