--- a/main/pages/play.html
+++ b/main/pages/play.html
@@ -57,7 +57,7 @@
       <div class="win-popup" onclick="event.stopPropagation()">
         <div class="top-win-section">
           <div class="win-title">
-            <p>You win!</p>
+            <p>Circuit completed!</p>
           </div>
         </div>
   
