--- a/main/pages/index.html
+++ b/main/pages/index.html
@@ -90,11 +90,8 @@
             </div>
         </div>
 
-        <!-- The sound button on bottom right -->
-        <div class="sound-container">
-            <div class="sound-button">
-                <button><i class="fa-solid fa-volume-xmark" style="color: #ffffff;"></i></button>
-            </div>
+        <div class="sound-button">
+            <button><i class="fa-solid fa-volume-xmark" style="color: #ffffff;"></i></button>
         </div>
 
 
@@ -457,6 +454,7 @@
         </div>
         
         <script>
+            const beepSound = new Audio('../assets/sounds/LunaSounds.mp3')
             const bot = document.getElementById('bot');
             const botText = document.getElementById('bot-text');
             const botTextInner = document.getElementById('bot-text-inner');
@@ -466,6 +464,8 @@
             bot.addEventListener('click', () => {
     if (!isAnimating) {
         isAnimating = true;
+
+        beepSound.play()
 
         bot.style.transform = 'scale(1.1)';
 
