--- a/main/pages/sandbox.html
+++ b/main/pages/sandbox.html
@@ -35,7 +35,7 @@
       <i class="fa-solid fa-xmark"></i>
     </button>
     <div class="options-title">
-      <p class="settings-title">Settings</p>
+      <p class="settings-title prevent-select">Settings</p>
     </div>
     <div class="settings-container">
       <div class="volume-container">
@@ -67,9 +67,9 @@
   <div id="gateInfoPanel" class="side-panel">
     <button id="togglePanelBtn">☰</button>
     <div id="gateInfoContent" class="panel-content">
-      <h3>Level Instructions</h3>
-      <p id="levelDesc" style="padding: 0 22%;">Feel Free to Play Around!</p>
-      <h3>Add Gates to Canvas</h3>
+      <h3 class="prevent-select">Level Instructions</h3>
+      <p id="levelDesc" style="padding: 0 10%; text-align:center;">Feel Free to Play Around!</p>
+      <h3 class="prevent-select">Add Gates to Canvas</h3>
       <ul id="gateList">
         <li onclick="insertGateIntoGame(AndGate)">
           And Gate
@@ -113,7 +113,7 @@
   <main>
     <!-- Added background to canvas -->
     <section id="">
-      <h1 id="Level-Name">Sandbox Mode</h1>
+      <h1 id="Level-Name" class="prevent-select">Sandbox Mode</h1>
 
     </section>
 
