Terms Language (Not Finished)

--- a/main/pages/policy.html
+++ b/main/pages/policy.html
@@ -16,8 +16,7 @@
     <section id="mainContainer">
         <header>
             <div class="logo">
-                <p class="logo-text"><a class="gatekeeper-home" href="../pages/index.html">GateKeeper </a></p>
-                <p>/</p>
+                <div class="logo-text"><a class="gatekeeper-home" href="../pages/index.html">GateKeeper </a></div>
                 <p class="terms-text">Terms & Policy</p>
             </div>
             
@@ -102,6 +101,7 @@
 
 
 
-    <script src="scripts/policy.js"></script>
+    <script src="../assets/scripts/policy.js"></script>
+    <script src="../assets/scripts/language.js"></script>
 </body>
 </html>
