--- a/main/pages/terms.html
+++ b/main/pages/terms.html
@@ -17,8 +17,7 @@
     <section id="mainContainer">
         <header>
             <div class="logo">
-                <p class="logo-text"><a class="gatekeeper-home" href="../pages/index.html">GateKeeper </a> </p>
-                <p>/</p>
+                <div class="logo-text"><a class="gatekeeper-home" href="../pages/index.html">GateKeeper</a></div>
                 <p class="terms-text">Terms & Policy</p>
             </div>
             
@@ -26,37 +25,37 @@
         <div id="mainContent">
             <div id="leftBar">
                 <ul>
-                    <li><a href="policy.html">Privacy Policy</a></li>
-                    <li><a href="terms.html">Terms of Service</a></li>
+                    <li><a href="policy.html" class="privacy-tab">Privacy Policy</a></li>
+                    <li><a href="terms.html" class="terms-tab">Terms of Service</a></li>
                 </ul>
             </div>
             <div id="mainText">
-                <h2>Terms of Service for GateKeeper Game</h2>
-                <h3>Last Updated: 3/14/2025</h3>
-                <p>Welcome to GateKeeper ("the Game"), a logic-based puzzle game that challenges your problem-solving skills through various logic gates and challenges. By accessing or using the Game, you agree to be bound by these Terms of Service ("Terms"). Please read them carefully.</p>
-                <p><strong>1. Acceptance of Terms</strong> By downloading, installing, or playing GateKeeper, you agree to these Terms and our Privacy Policy. If you do not agree to these Terms, do not use the Game.</p>
-                <p><strong>2. Eligibility </strong> You must be at least 13 years old to play the Game. If you are under 13, you may not use the Game without the consent of a parent or legal guardian. By using the Game, you confirm that you meet these age requirements.</p>
-                <p><strong>3. License to Use </strong> the Game We grant you a limited, non-exclusive, non-transferable license to access and play GateKeeper for personal, non-commercial use. This license does not grant you any rights to the Game's intellectual property.</p>
-                <p><strong>4. User Accounts </strong> You may be required to create an account to play GateKeeper. You are responsible for maintaining the confidentiality of your account credentials and for all activities that occur under your account. If you suspect any unauthorized access to your account, you must notify us immediately.</p>
-                <p><strong>5. Game Rules and Content </strong>
+                <h2 class="terms-line1">Terms of Service for GateKeeper Game</h2>
+                <h3 class="terms-line2">Last Updated: 3/14/2025</h3>
+                <p class="terms-line3">Welcome to GateKeeper ("the Game"), a logic-based puzzle game that challenges your problem-solving skills through various logic gates and challenges. By accessing or using the Game, you agree to be bound by these Terms of Service ("Terms"). Please read them carefully.</p>
+                <p class="terms-line4"><strong>1. Acceptance of Terms</strong> By downloading, installing, or playing GateKeeper, you agree to these Terms and our Privacy Policy. If you do not agree to these Terms, do not use the Game.</p>
+                <p class="terms-line5"><strong>2. Eligibility </strong> You must be at least 13 years old to play the Game. If you are under 13, you may not use the Game without the consent of a parent or legal guardian. By using the Game, you confirm that you meet these age requirements.</p>
+                <p class="terms-line6"><strong>3. License to Use </strong> the Game We grant you a limited, non-exclusive, non-transferable license to access and play GateKeeper for personal, non-commercial use. This license does not grant you any rights to the Game's intellectual property.</p>
+                <p class="terms-line7"><strong>4. User Accounts </strong> You may be required to create an account to play GateKeeper. You are responsible for maintaining the confidentiality of your account credentials and for all activities that occur under your account. If you suspect any unauthorized access to your account, you must notify us immediately.</p>
+                <p class="terms-line8"><strong>5. Game Rules and Content </strong>
                     •	GateKeeper is designed for personal entertainment purposes. You may not copy, modify, distribute, or otherwise exploit the Game or its content without prior written consent from the developers.
                     •	All content within the Game, including but not limited to graphics, sounds, and code, is the property of the developers and is protected by copyright law.
                     </p>
-                <p><strong>6. In-Game Purchases </strong> The Game may offer in-game purchases. Any purchases made are non-refundable, except as required by law. Prices and availability of in-game items are subject to change without notice.</p>
-                <p><strong>7. Conduct and Restrictions </strong> When using the Game, you agree not to:
+                <p class="terms-line9"><strong>6. In-Game Purchases </strong> The Game may offer in-game purchases. Any purchases made are non-refundable, except as required by law. Prices and availability of in-game items are subject to change without notice.</p>
+                <p class="terms-line10"><strong>7. Conduct and Restrictions </strong> When using the Game, you agree not to:
                     •	Engage in any cheating, hacking, or fraudulent activity.
                     •	Use the Game for any unlawful or inappropriate behavior.
                     •	Harass, intimidate, or threaten other users.
                     •	Distribute malicious software, including viruses or malware.
                     We reserve the right to suspend or terminate your account for violating these rules.
                     </p>
-                <p><strong>8. Termination </strong> We may suspend or terminate your access to GateKeeper at any time, with or without cause, and without prior notice, if we believe you have violated these Terms.</p>
-                <p><strong>9. Privacy and Data Collection </strong> Your use of the Game is governed by our Privacy Policy, which outlines the types of information we collect and how it is used. By playing GateKeeper, you consent to our data collection practices as described in the Privacy Policy.</p>
-                <p><strong>10. Disclaimers and Limitations </strong> of Liability GateKeeper is provided "as is," without any warranties, express or implied. We do not guarantee that the Game will be error-free or uninterrupted. To the fullest extent permitted by law, we are not liable for any direct, indirect, incidental, or consequential damages arising from your use of the Game.</p>
-                <p><strong>11. Governing Law </strong> These Terms are governed by and construed in accordance with the laws of United States of America. Any disputes arising out of or in connection with these Terms shall be subject to the exclusive jurisdiction of the courts in Kent, OH.</p>
-                <p><strong>12. Changes </strong> to the Terms We reserve the right to modify or update these Terms at any time. Any changes will be posted on this page with an updated date. By continuing to use the Game after any changes, you accept the updated Terms.</p>
-                <p><strong>13. Contact Information </strong> If you have any questions about these Terms or the Game, please contact us at:</p>
-                <p><strong>GateKeeper</strong></p>
+                <p class="terms-line11"><strong>8. Termination </strong> We may suspend or terminate your access to GateKeeper at any time, with or without cause, and without prior notice, if we believe you have violated these Terms.</p>
+                <p class="terms-line12"><strong>9. Privacy and Data Collection </strong> Your use of the Game is governed by our Privacy Policy, which outlines the types of information we collect and how it is used. By playing GateKeeper, you consent to our data collection practices as described in the Privacy Policy.</p>
+                <p class="terms-line13"><strong>10. Disclaimers and Limitations </strong> of Liability GateKeeper is provided "as is," without any warranties, express or implied. We do not guarantee that the Game will be error-free or uninterrupted. To the fullest extent permitted by law, we are not liable for any direct, indirect, incidental, or consequential damages arising from your use of the Game.</p>
+                <p class="terms-line14"><strong>11. Governing Law </strong> These Terms are governed by and construed in accordance with the laws of United States of America. Any disputes arising out of or in connection with these Terms shall be subject to the exclusive jurisdiction of the courts in Kent, OH.</p>
+                <p class="terms-line15"><strong>12. Changes </strong> to the Terms We reserve the right to modify or update these Terms at any time. Any changes will be posted on this page with an updated date. By continuing to use the Game after any changes, you accept the updated Terms.</p>
+                <p class="terms-line16"><strong>13. Contact Information </strong> If you have any questions about these Terms or the Game, please contact us at:</p>
+                <p class="terms-line17"><strong>GateKeeper</strong></p>
                 <p><strong>g6830926@gmail.com</strong></p>
             </div>
         </div>
@@ -78,6 +77,7 @@
 
 
 
-    <script src="scripts/terms.js"></script>
+    <script src="../assets/scripts/terms.js"></script>
+    <script src="../assets/scripts/language.js"></script>
 </body>
 </html>
