--- a/main/pages/play.html
+++ b/main/pages/play.html
@@ -73,6 +73,20 @@
     </div>
   </section>
 
+  <section>
+    <div class="popup-overlay" id="losePop" onclick="closePopup(event)">
+      <div class="win-popup" onclick="event.stopPropagation()">
+        <div class="top-win-section">
+          <div class="win-title prevent-select">
+            The Inputs are incorrect, Please try again.
+          </div>
+        </div>
+
+        <button class="win-button" onclick="closePopupLose()">Retry</button>
+      </div>
+    </div>
+  </section>
+
   <!-- Slide-out Gate Info Panel -->
   <div id="gateInfoPanel" class="side-panel">
     <button id="togglePanelBtn">☰</button>
