Can now Input/output JSON objects in sandbox mode

--- a/main/pages/sandbox.html
+++ b/main/pages/sandbox.html
@@ -131,7 +131,7 @@
               <textarea id="obj-text-string" class="object-inputs"></textarea>
             </div>
             <div>
-              <button onclick="changeObject()" class="win-button">Change Object</button>
+              <button onclick="changeObject()" class="win-button">Add Objects</button>
             </div>
         </div>
       </div>
