play.html settings sounds working

--- a/main/pages/level_select.html
+++ b/main/pages/level_select.html
@@ -98,5 +98,6 @@
     });
     </script>
     <script src="../assets/scripts/sound_effect.js"></script>
+    <script src="../assets/scripts/playOptionsSound.js"></script>
 </body>
 </html>
