--- a/main/pages/sandbox.html
+++ b/main/pages/sandbox.html
@@ -44,7 +44,7 @@
           <i class="fa-solid fa-volume-off"></i>
         </div>
         <div class="volume-slider">
-          <input type="range" id="volume-slider" min="0" max="100" value="50">
+          <input type="range" id="volume-slider" min="1" max="100" value="50">
         </div>
       </div>
 
@@ -53,7 +53,8 @@
           <i class="fa-solid fa-music"></i>
         </div>
         <div class="music-slider">
-          <input type="range" id="music-slider" min="0" max="100" value="50">
+          <input type="range" id="music-slider" min="1" max="100" value="50">
+          <!-- <div class="slash" style="display: block;"></div> -->
         </div>
       </div>
 
@@ -139,12 +140,14 @@
   <script src="../assets/scripts/DraggableObjects.js"></script>
   <script src="../assets/scripts/LogicGateObjects.js"></script>
   <script src="../assets/scripts/ComponentsObjects.js"></script>
-
+  
   <script src="../assets/scripts/sandboxMain.js"></script>
 
   <script src="../assets/scripts/sound_effect.js"></script>
   <script src="../assets/scripts/options.js"></script>
   <script src="../assets/scripts/sandboxSidePanel.js"></script>
+  <script src="../assets/scripts/playOptionsSound.js"></script>
+  
 </body>
 
 </html>
