--- a/main/pages/sandbox.html
+++ b/main/pages/sandbox.html
@@ -126,6 +126,9 @@
     <section>
       <div class="popup-overlay" id="objectPopup" onclick="toggleObjectPopup()">
         <div class="object-popup" onclick="event.stopPropagation()">
+            <div class="exit-button">
+              <button onclick="toggleObjectPopup()" class="support-exit-btn"><i class="fa-solid fa-xmark"></i></button>
+            </div>
             <h3 class="object-popup-title">Output Object</h3>
             <div class="object-popup-text-container">
               <textarea id="obj-text-string" class="object-inputs"></textarea>
