--- a/main/pages/play.html
+++ b/main/pages/play.html
@@ -47,7 +47,7 @@
               <div class="music-slider">
                   <input type="range" id="music-slider" min="1" max="100" value="50">
               </div>
-              <div class="slash" style="display: block;"></div>
+              <div class="slash-music" style="display: block;"></div>
           </div>
 
           <!-- Bottom Section with Back Button -->
@@ -136,7 +136,7 @@
     <script src="../assets/scripts/LogicGateObjects.js"></script>
     <script src="../assets/scripts/ComponentsObjects.js"></script>
     <script src="../assets/scripts/playMain.js"></script>
-    <script src="../assets/scripts/sound_effect.js"></script>
+    <!-- <script src="../assets/scripts/sound_effect.js"></script> -->
     <script src="../assets/scripts/options.js"></script>
     <script src="../assets/scripts/getInfoPanel.js"></script>
     <script src="../assets/scripts/playOptionsSound.js"></script>
