--- a/main/pages/level_select.html
+++ b/main/pages/level_select.html
@@ -31,6 +31,12 @@
                     throw new Error('Failed to load data/levels.json');
                 }
                 const levels = await response.json();
+
+                let levels_allowed = localStorage.getItem("levelsAllowed")
+                if (levels_allowed === null){
+                    levels_allowed = [1]
+                    localStorage.setItem("levelsAllowed", levels_allowed)
+                }
                 
                 const levelList = document.getElementById('level-list');
                 levelList.innerHTML = '';
@@ -38,24 +44,27 @@
                 levels.forEach(level => {
                     const listItem = document.createElement('div');
 
-                    //Replace this with whatever style levels buttons will have
-                    listItem.innerHTML = '<button>' + level.Name + '</button>';
 
+                    if (levels_allowed.includes(level.lvlNum)){
+                        //Replace this with whatever style levels buttons will have
+                        listItem.innerHTML = '<button>' + level.Name + '</button>';
+                        //If user clicks on button, then print level name and attributes
+                        listItem.addEventListener('click', () => {
+                            // play the btn sound effect when any listItem is clicked
+                            btnSound2.play();
+                            //store gates from selected level in local storage. Will allow users to start from the level they ended on.
+                            localStorage.setItem('initialize_objects', JSON.stringify(level));
+                            // delay the page change by 1 second (1000 ms)
+                            setTimeout(() => {
+                                window.location.href = 'play.html';  // Redirect to the play page after the delay
+                            }, 1000);
 
-                    //If user clicks on button, then print level name and attributes
-                    listItem.addEventListener('click', () => {
-                        // play the btn sound effect when any listItem is clicked
-                        btnSound2.play();
-                        //store gates from selected level in local storage. Will allow users to start from the level they ended on.
-                        localStorage.setItem('initialize_objects', JSON.stringify(level));
-                        // delay the page change by 1 second (1000 ms)
-                        setTimeout(() => {
-                            window.location.href = 'play.html';  // Redirect to the play page after the delay
-                        }, 1000);
-
-                        console.log(`Selected level: ${level.Name}`);
-                        console.log('Object:', JSON.stringify(level));
-                    });
+                            console.log(`Selected level: ${level.Name}`);
+                            console.log('Object:', JSON.stringify(level));
+                        });
+                    } else {
+                        listItem.innerHTML = '<button>' + '<svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" viewBox="0 0 80 80"> <!-- Lock Body --> <rect x="16" y="35" width="48" height="40" rx="4" ry="4" fill="black" /> <!-- Lock Shackle --> <path d="M24,35 L24,20 C24,12 56,12 56,20 L56,35" stroke="black" stroke-width="8" fill="none" /> <!-- Keyhole --><circle cx="40" cy="55" r="6" fill="white" /><rect x="38" y="55" width="4" height="12" fill="white" /> </svg>' + '</button>';
+                    }
 
 
                     levelList.appendChild(listItem);
